added address and payment fields for order
